fix: 엔티티 빌더 패턴 수정 및 타입 변환 오류 해결
- 엔티티 빌더 패턴 수정
  * @AllArgsConstructor 추가
  * EquipmentJournalEntity, BloodBankEntity, ExaminationJournalEntity,
    ExaminationResultEntity, ExaminationScheduleEntity에 적용
  * @Builder와 @NoArgsConstructor와의 호환성 확보

- 타입 변환 수정
  * ExaminationService: examinationPrice Long → String 변환 추가
  * toList() → collect(Collectors.toList()) 변경하여 타입 추론 문제 해결

- 기타 수정
  * Transactional import를 Spring으로 변경
  * PatientNumber를 Long으로 변환
  * DisabilityEntity 필드명 불일치 수정
  * toBuilder() → builder() 패턴으로 변경